[workspace]
members = [
    "lilliput-core",
    "lilliput-float",
    "lilliput-serde",
]
resolver = "2"

[workspace.package]
repository = "https://github.com/regexident/lilliput"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
proptest = { version = "1.6.0" }
proptest-derive = { version = "0.6.0" }
rand = "0.9.0"
rand_xorshift = "0.4.0"
serde = { version = "1.0.197", default-features = false }
test-log = { version = "0.2.17", features = ["trace"] }
thiserror = "2.0.12"
tracing = { version = "0.1.41" }

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[profile.samply]
inherits = "release"
debug = true
